[package]
name = "digest"
version = "0.1.0"
authors = ["zhangmeng29 <zhangmeng29@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14"
blobby = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
alloc = []
std = ["alloc", "mesalock_sgx"]
dev = ["blobby"]
mesalock_sgx = ["sgx_tstd"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]